<resources>

    <string name="app_name">Split Tip</string>
    
    <string name="about_title">About Split Tip</string>
    <string name="about_message">Split Tip was made by Jessica Metro and RJ Marsan</string>
    
    
    <string name="title_section3">Uneven Split</string>
    <string name="title_section2">Calculate</string>
    <string name="title_section1">Even Split</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_about">About</string>
    <string name="menu_clear">Clear</string>
    <string name="title_activity_tip">Split Tip</string>


    <string name="bill">Bill</string>
    <string name="bill_hint">Bill Amount</string>
    <string name="tip_percent">Tip %</string>
    <string name="tip_percent_hint">Tip Amount (in %)</string>
    <string name="tip_dollar">Tip %s</string>
    <string name="tip_dollar_hint">Tip Amount (in %s)</string>
    <string name="total">Total</string>
    <string name="total_hint">Total Amount</string>
    
    
    
    <string name="people">People #</string>
    <string name="people_hint">Number of People</string>
    <string name="each_tip_dollar">Tip %s</string>
    <string name="each_tip_dollar_hint">Tip Each (in %s)</string>
    <string name="each_total">Total</string>
    <string name="each_total_hint">Total Each</string>

    <string name="each">EACH</string>
    
    
    
    <string name="tax">Tax %s</string>
    <string name="tax_hint">Tax on Bill</string>
    
    <string name="your">YOUR SHARE</string>
    
    <string name="item_n">Item %2d</string>
    <string name="item_n_hint">Itemized Cost</string>
    <string name="your_tip_dollar">Tip %s</string>
    <string name="your_tip_dollar_hint">Tip For You (in %s)</string>
    <string name="your_total">Total</string>
    <string name="your_total_hint">Total for You</string>
    
</resources>